# projekt-group14-hospital

./: .gitignore  Anforderungen.md  Programstructue.md  README.md  compileWithCmake.sh  main.c
filesharing/HWSE/: CMakeLists.txt
filesharing/HWSE/FizzBuzz/: CMakeLists.txt
filesharing/HWSE/FizzBuzz/include/: fizzbuzz.h
filesharing/HWSE/FizzBuzz/src/: fizzbuzz.cpp
filesharing/HWSE/FizzBuzz/test/: fizzbuzz_test.cpp
include/: CSV_read.h  CSV_write.h  changePatientInfo.h  dateFunctions.h  definitions.h  otherfunctions.h  printFunctions.h
include/output/: CSV_write  printFunctions
organisation/: README.md
programFiles/PatientData/: PatientDataDB.csv  test.csv
src/: CMakeLists.txt  CSV_read.cpp  CSV_write.cpp  changePatientInfo.cpp  dateFunctions.cpp  file_handling.c  file_handling.cpp  file_handling.h  file_handling.h.gch  main  main.c  main.cpp  otherfunctions.cpp  printFunctions.cpp  test
src/output/: otherfunctions.cpp
tests/: addNewPatients_tests.cpp  dateFunctions_tests.cpp  file_handling.cpp  otherFunctions_tests.cpp  seatingMap_tests.cpp  testMain.cpp  test_CSV_write.cpp  test_PrintFunction_GenerateString.cpp  test_csv_read.cpp  wait_and_prio_list_tests.cpp
